<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="tv_name">Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_rpassword">Repeate password</string>
    <string name="bt_register">REGISTER</string>
    <string name="bt_login">LOG IN</string>
    <string name="etOr">OR</string>
    <string name="titleDoCardapio">Pratos principais</string>

</resources>