<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" 
        android:textColor="@color/purple_500"/>


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="149dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteY="203dp"
        android:textColor="@color/purple_500"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="283dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="315dp"
        android:textColor="@color/purple_500"/>

    <TextView
        android:id="@+id/tvRPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_rpassword"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="383dp" />

    <EditText
        android:id="@+id/etRPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="435dp"
        android:textColor="@color/purple_500"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/btRegister"
        android:text="@string/bt_register" />

</LinearLayout>